--- a/app/components/title/style.less
+++ b/app/components/title/style.less
@@ -1,11 +1,25 @@
 .title{
     width:100%;
     height:60px;
-    background: #00a2ae;
+    color: #08fcfa;
+    font-size:25px;
+    font-weight: 500;
+    font-family: "Microsoft Himalaya";
+    letter-spacing: 8px;
+    text-shadow: 0px 1px 0px #999,
+    0px 2px 0px #888, 0px 3px 0px #777,
+    0px 4px 0px #666, 0px 5px 0px #555,
+    0px 6px 0px #444, 0px 7px 0px #333,
+    0px 8px 7px #08fcfa;
+    background-color: #333333;
+    opacity: 0.7;
+
     span {
         display: inline-block;
         width: 100%;
-        text-align:center ;
+        text-align:center;
         line-height: 60px;
     }
 }
+
+
