--- a/app/containers/ResourceVisual/style.css
+++ b/app/containers/ResourceVisual/style.css
@@ -1,3 +1,34 @@
 .administer{
-    color: #00a2ae;
+    color: #08fcfa;
+    font-size:18px;
+    font-weight: 500;
+    text-align: center;
+    font-family: "Microsoft Himalaya";
+    height: 60px;
+    line-height: 60px;
+    letter-spacing: 5px;
+    /*text-shadow: 0px 1px 0px #999,*/
+    /*0px 2px 0px #888, 0px 3px 0px #777,*/
+    /*0px 4px 0px #666*/
 }
+.body{
+    background: url(1.JPG);
+    z-index: -1;
+}
+.junior{
+    color: #08fcfa;
+    font-size:18px;
+    font-weight: 500;
+    font-family: "Microsoft Himalaya";
+    height: 60px;
+    line-height: 60px;
+    letter-spacing: 5px;
+    text-shadow: 0px 1px 0px #999,
+    0px 2px 0px #888, 0px 3px 0px #777,
+    0px 4px 0px #666
+}
+.time{
+    color: #00a2ae;
+    margin: 0 auto;
+}
+
