--- a/app/components/juniorcenter/style.less
+++ b/app/components/juniorcenter/style.less
@@ -10,26 +10,27 @@
   color: #00a2ae;
   text-align: center;
   font-size: 14px;
+  font-weight: 600;
 }
 .module{
   border: 1px solid #00a2ae;
   margin-right: 8px;
-  opacity: 0.6;
+  opacity: 0.9;
   background:url(2.jpg) repeat 0 0;
-  background-size:86.48px 76.8px;
+  background-size:100px 90px;
   z-index: 10;
   text-align:center;		/*水平居中*/
   cursor:pointer;
   color:#066197;
-  width: 86.48px;
-  height: 38.4px;
+  width: 100px;
+  height: 45px;
   display: block;
 
 }
 .module:hover {
-  background: url(2.jpg) repeat 0px 38.4px;
+  background: url(2.jpg) repeat 0px 45px;
   color:#1d7eb8;
-  -webkit-box-shadow: 0 0 6px #1d7eb8;
+  //-webkit-box-shadow: 0 0 6px #1d7eb8;
   transition-duration: 0.5s;
 }
 //.container{
@@ -49,7 +50,7 @@ position: relative;
   font-size:12px;
   letter-spacing: 5px;
   background: url("c02.jpg") no-repeat;
-  background-position: left bottom;
+  background-position: left center;
   padding-left: 22px;
   margin-bottom: 5px;
   display: inline-block;
@@ -63,4 +64,5 @@ position: relative;
   position: relative;
   right: 20px;
   background: url("c03.jpg") no-repeat;
+  text-indent: -9999px;
 }
