--- a/app/components/title/style.less
+++ b/app/components/title/style.less
@@ -1,11 +1,75 @@
-.title{
-    width:100%;
-    height:60px;
-    background: #00a2ae;
-    span {
-        display: inline-block;
-        width: 100%;
-        text-align:center ;
-        line-height: 60px;
-    }
+.header-title{
+  background: url(bg.JPG) center center no-repeat;
 }
+.title-div{
+  position:relative;
+  width:700PX;
+  height:40px;
+  margin:0 auto;
+}
+.left-button{
+  display:block;
+  width:200px;
+  height:40px;
+  float:left;
+  background:url(left.JPG) center center no-repeat;
+}
+.left-button:hover{
+
+}
+.mid-button {
+  display: block;
+  width: 200px;
+  height: 40px;
+  margin: 0 auto;
+  font-size: 36px;
+  line-height: 40px;
+  text-align: center;
+  font-family: 'Microsoft Yahei', sans-serif;
+  vertical-align: bottom;
+  color: #9fd2f6;
+  letter-spacing: 8px;
+  font-weight: bold;
+}
+.right-button{
+  display:block;
+  position:absolute;
+  right:0;
+  top:0;
+  width:200px;
+  height:40px;
+  background:url(right.JPG) center center no-repeat;
+}
+
+.mid-button:hover{
+  color:#fff;
+
+}  //
+  //}
+.title3{
+  background: url(../dashboard/echarts/44.jpg) no-repeat;
+  opacity:0.6;
+  background-size:150.2px 40px;
+  background-position: bottom;
+
+}
+
+
+
+  //border-width:1px;
+  //border-style:solid;
+  //background-clip:padding-box,border-box;
+  //background-origin:padding-box,border-box;
+  //background-image:linear-gradient(#fff,#fff),linear-gradient(#5c5fa5,#893f60);}
+
+
+
+
+
+
+
+
+
+
+
+
