--- a/app/components/title/style.less
+++ b/app/components/title/style.less
@@ -1,11 +1,58 @@
-.title{
-    width:100%;
-    height:60px;
-    background: #00a2ae;
-    span {
-        display: inline-block;
-        width: 100%;
-        text-align:center ;
-        line-height: 60px;
-    }
+.header-title{
+    background: url(bg.JPG) center center no-repeat;
 }
+.title-div{
+    position:relative;
+    width:700PX;
+    height:40px;
+    margin:0 auto;
+}
+.left-button{
+    display:block;
+    width:200px;
+    height:40px;
+    float:left;
+    background:url(left.JPG) center center no-repeat;
+}
+.left-button:hover{
+
+}
+.mid-button{
+    display:block;
+    width:200px;
+    height:40px;
+    margin:0 auto;
+    font-size: 36px;
+    line-height:40px;
+    text-align: center;
+    font-family: 'Microsoft Yahei', sans-serif;
+    vertical-align:bottom;
+    color:#9fd2f6;
+    letter-spacing: 8px;
+    font-weight: bold;
+
+
+
+
+    //text-shadow: 0px 1px 0px #999, 0px 2px 0px #888, 0px 3px 0px #777,
+    //0px 4px 0px #666, 0px 5px 0px #555, 0px 6px 0px #444, 0px 7px 0px #333, 0px 8px 7px #001135;
+    //
+    //background-image: -webkit-gradient(linear, 0 0, 0 bottom, from(rgba(18, 211, 227, 1)), to(rgba(6, 228, 189, 1)));
+    //-webkit-background-clip: text;
+    //-webkit-text-fill-color: transparent;
+
+}
+.right-button{
+    display:block;
+    position:absolute;
+    right:0;
+    top:0;
+    width:200px;
+    height:40px;
+    background:url(right.JPG) center center no-repeat;
+   }
+
+.mid-button:hover{
+color:#fff;
+
+    }
